# easymd

./: .gitignore  LICENSE  README.md  README.zh-CN.md  RELEASING.md  demo.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
src/easymd/: __init__.py  app.py  cli.py  config.py  editor.py  translate.py
tests/: conftest.py  smoke_test.py  test_bracket_paragraph.py  test_cli.py  test_clipboard.py  test_commands.py  test_config.py  test_dot_repeat.py  test_editing.py  test_find.py  test_motions.py  test_new_keys.py  test_scroll_sync.py  test_search_highlight.py  test_summary_view.py  test_text_objects.py  test_toc.py  test_translate.py  test_translate_view.py  test_visual.py  test_word_count.py  test_word_search.py
