[project]
name = "easymd"
version = "0.1.0"
description = "Terminal Markdown editor with vim-style keys and live side-by-side preview"
requires-python = ">=3.11"
dependencies = ["textual[syntax]>=8.0"]

[project.scripts]
easymd = "easymd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easymd"]
