[project]
name = "easymd-cli"
version = "0.4.0"
description = "Terminal Markdown editor with vim-style keys and live side-by-side preview"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Yiqi Yang", email = "yangyiqi5261@gmail.com" }]
keywords = ["markdown", "vim", "tui", "editor", "terminal", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "textual[syntax]>=8.0",
    "typer>=0.12",
    "click>=8.1",
    "tomli>=2 ; python_version < '3.11'",  # config file reading on 3.10
]

[project.optional-dependencies]
# Translation via DeepSeek (:trans). Kept optional so the core editor has no
# network dependency.
translate = ["httpx>=0.27"]

[project.scripts]
easymd = "easymd.cli:main"

[project.urls]
Repository = "https://github.com/decajoin/easymd"
Issues = "https://github.com/decajoin/easymd/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "httpx>=0.27",  # so translation tests can stub the client
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easymd"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "demo.md", "README.md", "LICENSE"]
